[gd_scene load_steps=3 format=1]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://unit.png" type="Texture" id=2]

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="phalanx" type="Button" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 27.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "="
flat = false

[node name="box" type="Button" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 44.0
margin/right = 27.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "#"
flat = false

[node name="wedge" type="Button" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 22.0
margin/right = 27.0
margin/bottom = 42.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "<|"
flat = false

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 1026.17, 599.629 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
limit/smoothed = false
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 67.1275, 39.9066 )
texture = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]

transform/pos = Vector2( 703.225, 290.125 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]

transform/pos = Vector2( 701.718, 211.743 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]

transform/pos = Vector2( 698.703, 131.854 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]

transform/pos = Vector2( 692.674, 48.9506 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="."]

transform/pos = Vector2( 729.946, 366.291 )
texture = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="."]

transform/pos = Vector2( 736.485, 447.299 )
texture = ExtResource( 2 )

[node name="Sprite7" type="Sprite" parent="."]

transform/pos = Vector2( 830.869, 453.373 )
texture = ExtResource( 2 )

[node name="Sprite8" type="Sprite" parent="."]

transform/pos = Vector2( 810.775, 371.578 )
texture = ExtResource( 2 )

[node name="Sprite9" type="Sprite" parent="."]

transform/pos = Vector2( 784.673, 290.526 )
texture = ExtResource( 2 )

[node name="Sprite10" type="Sprite" parent="."]

transform/pos = Vector2( 791.1, 217.798 )
texture = ExtResource( 2 )

[node name="Sprite11" type="Sprite" parent="."]

transform/pos = Vector2( 783.175, 141.312 )
texture = ExtResource( 2 )

[node name="Sprite12" type="Sprite" parent="."]

transform/pos = Vector2( 790.434, 65.5243 )
texture = ExtResource( 2 )

[node name="Sprite13" type="Sprite" parent="."]

transform/pos = Vector2( 653.483, 434.83 )
texture = ExtResource( 2 )

[node name="Sprite14" type="Sprite" parent="."]

transform/pos = Vector2( 555.506, 422.771 )
texture = ExtResource( 2 )

[node name="Sprite15" type="Sprite" parent="."]

transform/pos = Vector2( 456.021, 421.264 )
texture = ExtResource( 2 )

[node name="Sprite16" type="Sprite" parent="."]

transform/pos = Vector2( 362.566, 425.786 )
texture = ExtResource( 2 )

[node name="Sprite17" type="Sprite" parent="."]

transform/pos = Vector2( 293.228, 428.8 )
texture = ExtResource( 2 )

[node name="Sprite18" type="Sprite" parent="."]

transform/pos = Vector2( 205.803, 436.337 )
texture = ExtResource( 2 )

[node name="Sprite19" type="Sprite" parent="."]

transform/pos = Vector2( 124.406, 425.786 )
texture = ExtResource( 2 )

[node name="Sprite20" type="Sprite" parent="."]

transform/pos = Vector2( 52.0541, 428.8 )
texture = ExtResource( 2 )

[node name="Sprite21" type="Sprite" parent="."]

transform/pos = Vector2( 617.307, 363.985 )
texture = ExtResource( 2 )

[node name="Sprite22" type="Sprite" parent="."]

transform/pos = Vector2( 623.336, 290.125 )
texture = ExtResource( 2 )

[node name="Sprite23" type="Sprite" parent="."]

transform/pos = Vector2( 615.799, 202.699 )
texture = ExtResource( 2 )

[node name="Sprite24" type="Sprite" parent="."]

transform/pos = Vector2( 605.248, 131.854 )
texture = ExtResource( 2 )

[node name="Sprite25" type="Sprite" parent="."]

transform/pos = Vector2( 597.711, 42.9213 )
texture = ExtResource( 2 )

[node name="Sprite26" type="Sprite" parent="."]

transform/pos = Vector2( 537.418, 348.911 )
texture = ExtResource( 2 )

[node name="Sprite27" type="Sprite" parent="."]

transform/pos = Vector2( 537.418, 279.574 )
texture = ExtResource( 2 )

[node name="Sprite28" type="Sprite" parent="."]

transform/pos = Vector2( 526.866, 195.163 )
texture = ExtResource( 2 )

[node name="Sprite29" type="Sprite" parent="."]

transform/pos = Vector2( 532.895, 115.274 )
texture = ExtResource( 2 )

[node name="Sprite30" type="Sprite" parent="."]

transform/pos = Vector2( 523.852, 44.4286 )
texture = ExtResource( 2 )

[node name="Sprite31" type="Sprite" parent="."]

transform/pos = Vector2( 445.058, 345.347 )
texture = ExtResource( 2 )

[node name="Sprite32" type="Sprite" parent="."]

transform/pos = Vector2( 357.092, 350.234 )
texture = ExtResource( 2 )

[node name="Sprite33" type="Sprite" parent="."]

transform/pos = Vector2( 284.601, 350.234 )
texture = ExtResource( 2 )

[node name="Sprite34" type="Sprite" parent="."]

transform/pos = Vector2( 199.892, 344.532 )
texture = ExtResource( 2 )

[node name="Sprite35" type="Sprite" parent="."]

transform/pos = Vector2( 116.812, 346.161 )
texture = ExtResource( 2 )

[node name="Sprite36" type="Sprite" parent="."]

transform/pos = Vector2( 43.5068, 344.532 )
texture = ExtResource( 2 )

[node name="Sprite37" type="Sprite" parent="."]

transform/pos = Vector2( 128.215, 36.6486 )
texture = ExtResource( 2 )

[node name="Sprite38" type="Sprite" parent="."]

transform/pos = Vector2( 190.932, 44.7936 )
texture = ExtResource( 2 )

[node name="Sprite39" type="Sprite" parent="."]

transform/pos = Vector2( 268.311, 43.9791 )
texture = ExtResource( 2 )

[node name="Sprite40" type="Sprite" parent="."]

transform/pos = Vector2( 353.019, 43.1646 )
texture = ExtResource( 2 )

[node name="Sprite41" type="Sprite" parent="."]

transform/pos = Vector2( 444.244, 39.9066 )
texture = ExtResource( 2 )

[node name="Sprite42" type="Sprite" parent="."]

transform/pos = Vector2( 444.244, 267.968 )
texture = ExtResource( 2 )

[node name="Sprite43" type="Sprite" parent="."]

transform/pos = Vector2( 446.687, 191.405 )
texture = ExtResource( 2 )

[connection signal="pressed" from="CanvasLayer/phalanx" to="." method="_on_phalanx_pressed"]

[connection signal="pressed" from="CanvasLayer/box" to="." method="_on_box_pressed"]

[connection signal="pressed" from="CanvasLayer/wedge" to="." method="_on_wedge_pressed"]


